tests/algorithms/x/Elixir/backtracking/n_queens_math.exs
# Code generated by Mochi transpiler 2025-08-06 15:56 +0700
defmodule Main do
  def _now() do
    seeded = Process.get(:_now_seeded, false)
    seed = Process.get(:_now_seed, 0)
    if !seeded do
      case System.get_env("MOCHI_NOW_SEED") do
        nil -> :ok
        s ->
          case Integer.parse(s) do
            {v, ""} ->
              Process.put(:_now_seed, v)
              Process.put(:_now_seeded, true)
              seed = v
              seeded = true
            _ -> :ok
          end
      end
    end
    if seeded do
      seed = rem(seed * 1664525 + 1013904223, 2147483647)
      Process.put(:_now_seed, seed)
      abs(seed)
    else
      System.unique_integer([:positive, :monotonic])
    end
  end
  defp _bench_now() do
    System.monotonic_time(:microsecond)
  end
  defp _mem() do
    :erlang.process_info(self(), :memory) |> elem(1)
  end
  defp _lookup_host(host) do
    case :inet.gethostbyname(String.to_charlist(host)) do
      {:ok, {:hostent, _, _, _, _, addrs}} ->
        ips = Enum.map(addrs, &:inet.ntoa/1)
        [ips, nil]
      {:error, reason} ->
        [nil, reason]
    end
  end
  defp _clamp_slice(n, start, stop) do
    start = if start < 0, do: start + n, else: start
    stop = if stop < 0, do: stop + n, else: stop
    start = max(min(start, n), 0)
    stop = min(max(stop, start), n)
    {start, stop}
  end
  defp _slice(base, start, len) do
    cond do
      is_binary(base) ->
        chars = String.graphemes(base)
        n = length(chars)
        {s, e} = _clamp_slice(n, start, start + len)
        Enum.slice(chars, s, e - s) |> Enum.join("")
      true ->
        n = length(base)
        {s, e} = _clamp_slice(n, start, start + len)
        Enum.slice(base, s, e - s)
    end
  end
  defp _len(x) do
    cond do
      x == nil -> 0
      is_binary(x) -> String.length(x)
      true -> length(x)
    end
  end
  defp _bigrat(v) do
    _bigrat(v, 1)
  end
  defp _bigrat(n, d) do
    n = trunc(n)
    d = trunc(d)
    g = Integer.gcd(n, d)
    n = div(n, g)
    d = div(d, g)
    if d < 0 do
      {-n, -d}
    else
      {n, d}
    end
  end
  defp _bigrat_add(a, b) do
    {an, ad} = a
    {bn, bd} = b
    _bigrat(an * bd + ad * bn, ad * bd)
  end
  defp _bigrat_sub(a, b) do
    {an, ad} = a
    {bn, bd} = b
    _bigrat(an * bd - ad * bn, ad * bd)
  end
  defp _bigrat_mul(a, b) do
    {an, ad} = a
    {bn, bd} = b
    _bigrat(an * bn, ad * bd)
  end
  defp _bigrat_div(a, b) do
    {an, ad} = a
    {bn, bd} = b
    _bigrat(an * bd, ad * bn)
  end
  defp _bigrat_neg(a) do
    {n, d} = a
    {-n, d}
  end
  defp _sha256(bs) do
    bin = :erlang.list_to_binary(bs)
    :crypto.hash(:sha256, bin) |> :erlang.binary_to_list()
  end
  defp _getenv(name) do
    System.get_env(name)
  end
  defp _environ() do
    System.get_env() |> Enum.map(fn {k, v} -> "#{k}=#{v}" end)
  end
  defp _getoutput(cmd) do
    {out, 0} = System.cmd("sh", ["-c", cmd])
    String.trim(out)
  end
  defp _fetch(url) do
    {out, 0} = System.cmd("curl", ["-fsSL", url])
    s = String.trim(out)
    case String.split(s, "\"title\":\"") do
      [_, rest] ->
        case String.split(rest, "\"") do
          [title | _] -> title
          _ -> ""
        end
      _ -> ""
    end
  end
  defp _md5_hex(s) do
    :crypto.hash(:md5, s) |> Base.encode16(case: :lower)
  end
  def contains(xs, x) do
    try do
      i = 0
      while_fun = fn while_fun, i ->
        if i < _len(xs) do
          if Enum.at(xs, i) == x do
            throw {:return, true}
          end
          i = i + 1
          while_fun.(while_fun, i)
        else
          i
        end
      end
      i = try do
          while_fun.(while_fun, i)
        catch
          {:break, {i}} -> i
        end

      throw {:return, false}
    catch
      {:return, val} -> val
    end
  end
  def repeat(s, times) do
    try do
      result = ""
      i = 0
      while_fun_2 = fn while_fun_2, i, result ->
        if i < times do
          result = (result <> s)
          i = i + 1
          while_fun_2.(while_fun_2, i, result)
        else
          {i, result}
        end
      end
      {i, result} = try do
          while_fun_2.(while_fun_2, i, result)
        catch
          {:break, {i, result}} -> {i, result}
        end

      throw {:return, result}
    catch
      {:return, val} -> val
    end
  end
  def build_board(pos, n) do
    try do
      board = []
      i = 0
      while_fun_3 = fn while_fun_3, board, i ->
        if i < _len(pos) do
          col = Enum.at(pos, i)
          line = ((repeat(". ", col) <> "Q ") <> repeat(". ", n - 1 - col))
          board = (board ++ [line])
          i = i + 1
          while_fun_3.(while_fun_3, board, i)
        else
          {board, i}
        end
      end
      {board, i} = try do
          while_fun_3.(while_fun_3, board, i)
        catch
          {:break, {board, i}} -> {board, i}
        end

      throw {:return, board}
    catch
      {:return, val} -> val
    end
  end
  def depth_first_search(pos, dr, dl, n) do
    try do
      row = _len(pos)
      if row == n do
        single = []
        single = (single ++ [build_board(pos, n)])
        throw {:return, single}
      end
      boards = []
      col = 0
      while_fun_4 = fn while_fun_4, boards, col ->
        if col < n do
          try do
            {col} = if contains(pos, col) || contains(dr, row - col) || contains(dl, row + col) do
              col = col + 1
              throw :continue
              {col}
            else
              {col}
            end
            result = depth_first_search((pos ++ [col]), (dr ++ [row - col]), (dl ++ [row + col]), n)
            boards = concat.(boards, result)
            col = col + 1
          catch
            :continue -> nil
          end
          while_fun_4.(while_fun_4, boards, col)
        else
          {boards, col}
        end
      end
      {boards, col} = try do
          while_fun_4.(while_fun_4, boards, col)
        catch
          {:break, {boards, col}} -> {boards, col}
        end

      throw {:return, boards}
    catch
      {:return, val} -> val
    end
  end
  def n_queens_solution(n) do
    try do
      boards = depth_first_search([], [], [], n)
      i = 0
      while_fun_5 = fn while_fun_5, i ->
        if i < _len(boards) do
          j = 0
          while_fun_6 = fn while_fun_6, j ->
            if j < _len(Enum.at(boards, i)) do
              IO.puts(Enum.at(Enum.at(boards, i), j))
              j = j + 1
              while_fun_6.(while_fun_6, j)
            else
              j
            end
          end
          j = try do
              while_fun_6.(while_fun_6, j)
            catch
              {:break, {j}} -> j
            end

          IO.puts("")
          i = i + 1
          while_fun_5.(while_fun_5, i)
        else
          i
        end
      end
      i = try do
          while_fun_5.(while_fun_5, i)
        catch
          {:break, {i}} -> i
        end

      IO.puts("#{Kernel.inspect(_len(boards))} solutions were found.")
      throw {:return, _len(boards)}
    catch
      {:return, val} -> val
    end
  end
  def main() do
    n_queens_solution(4)
  end
end
Main.main()
